# b64-clip

./: BRIEF.md  BUILD-REPORT.md  LAUNCH-PLAN.md  PRIVACY.md  README.md  SELLER-REPORT.md  TEST-REPORT.md  b64_clip.py  pyproject.toml  screenshots.md  store-listing.md  test_b64_clip.py
b64_clip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: index.html
landing/: index.html
launch/: landing.md  pricing.md  store-listing.md
screenshots/: screenshot1.txt  screenshot2.txt  screenshot3.txt  screenshot4.txt  terminal-demo.txt
